--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
   "name": "Shiv Computer",
   "short_name": "Shiv",
-  "start_url": ".",
+  "description": "Your go-to Place for Practical Computer Education.",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "background_color": "#f0f8ff",
+  "theme_color": "#0072ff",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "SHIV.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "SHIV.png",
       "sizes": "512x512",
       "type": "image/png"
     }
