--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     },
     {
-      "src": "SHIV1.png",
+      "src": "shiv.png",
       "sizes": "512x512",
       "type": "image/png"
     }
